<resources>
    <string name="app_name">CashUIApp</string>
    <string name="channel_id" translatable="false">hardik-channel</string>
    <string name="channel_name" translatable="false">hardik</string>
    <string name="atm_ui">atmUI</string>
    <string name="mainnet">MAINNET</string>
    <string name="testnet">TESTNET</string>
    <string name="atm_map">Atm Map</string>
    <string name="open_activity">Open Activity</string>
    <string name="cash_code">cashCode</string>
    <string name="open_status">Open Status</string>
    <string name="open_support">Open Support</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="open_profile">Open Profile</string>
    <string name="profile_webview">Profile Webview</string>
    <string name="get_user_state">Get User State</string>
    <string name="user_state">User State</string>
    <string name="supportui">supportUI</string>
    <string name="result_cancelled">Result Cancelled</string>
    <string name="id_front">ID Front</string>
    <string name="id_back">ID Back</string>
    <string name="selfie">Selfie</string>
</resources>
